--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -98,7 +98,7 @@
   "an4.198:13.8": "Er gibt den Zweifel auf, meditiert, indem er über den Zweifel hinausgegangen ist, nicht im Unklaren über taugliche Eigenschaften, und läutert den Geist von Zweifel. ",
   "an4.198:13.9": "Er gibt diese fünf Hindernisse auf, die Verunreinigungen des Herzens, die die Weisheit schwächen. ",
   "an4.198:13.10": "Dann tritt er, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … Er tritt in die zweite Vertiefung ein … er tritt in die dritte Vertiefung ein … er tritt in die vierte Vertiefung ein und verweilt darin. ",
-  "an4.198:14.1": "Wenn der Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerschütterlich –, dann streckt er ihn aus auf die Erinnerung an frühere Leben … ",
+  "an4.198:14.1": "Wenn der Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt er ihn aus auf die Erinnerung an frühere Leben … ",
   "an4.198:14.2": "auf die Erkenntnis von Tod und Wiedergeburt der Lebewesen … ",
   "an4.198:14.3": "auf die Erkenntnis, dass die Befleckungen aufgelöst sind. ",
   "an4.198:14.4": "Er versteht wahrhaftig: ‚Das ist das Leiden.‘ … ‚Das ist der Ursprung des Leidens.‘ … ‚Das ist das Aufhören des Leidens.‘ … ‚Das ist die Übung, die zum Aufhören des Leidens führt.‘ ",
