--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -249,6 +249,7 @@
   "dn27:27.0": "14. Über schlechtes Verhalten ",
   "dn27:27.1": "Ein Adliger, ein Brahmane, ein Kaufmann, ein Arbeiter oder ein Asket mag mit dem Körper, der Sprache und dem Geist Schlechtes tun. Er hat falsche Ansicht, und er handelt dementsprechend. Und weil er so gehandelt hat, wird er, wenn sein Körper auseinanderbricht, nach dem Tod, an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle. ",
   "dn27:28.1": "",
+  "dn27:28.5": "Ein Adliger, ein Brahmane, ein Kaufmann, ein Arbeiter oder ein Asket mag mit dem Körper, der Sprache und dem Geist Gutes tun. Er hat rechte Ansicht, und er handelt dementsprechend. Und weil er so gehandelt hat, wird er, wenn sein Körper auseinanderbricht, nach dem Tod, an einem guten Ort wiedergeboren, in einer himmlischen Welt. ",
   "dn27:29.1": "Ein Adliger, ein Brahmane, ein Kaufmann, ein Arbeiter oder ein Asket mag mit dem Körper, der Sprache und dem Geist zweierlei Dinge tun tun. Er hat gemischte Ansichten, und er handelt dementsprechend. Und weil er so gehandelt hat, wird er, wenn sein Körper auseinanderbricht, nach dem Tod, sowohl Glück als auch Leid erfahren. ",
   "dn27:30.0": "15. Die Eigenschaften, die zum Erwachen führen ",
   "dn27:30.1": "Ein Adliger, ein Brahmane, ein Kaufmann, ein Arbeiter oder ein Asket, der mit Körper, Sprache und Geist gezügelt ist und die sieben Eigenschaften entwickelt, die zum Erwachen führen, erlischt in diesem Leben. ",
