--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -362,7 +362,7 @@
   "dn29:37.3": "Es gibt Asketen und Brahmanen, die diese Doktrin, diese Ansicht haben: ",
   "dn29:37.4": "‚Das Selbst besitzt nach dem Tod Form und ist gesund; ",
   "dn29:37.6": "oder es besitzt keine Form; ",
-  "dn29:37.7": "oder es ist sowohl materiell als auch immateriell; ",
+  "dn29:37.7": "oder es besitzt sowohl Form als auch nicht; ",
   "dn29:37.8": "oder es ist weder materiell noch immateriell; ",
   "dn29:37.9": "es besitzt Wahrnehmung; ",
   "dn29:37.10": "oder ist ohne Wahrnehmung; ",
