--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -163,5 +163,6 @@
   "dn15:26.12": "Pošto je tako, slobodno se može reći da čvrsto gledište da sopstvo nema materijalni oblik i da je neograničeno ne leži u osnovi ovakvog razmišljanja.",
   "dn15:26.13": "Ānanda, kada neko ne opisuje sopstvo, na takve načine ga ne opisuje? ",
   "dn15:27.0": "4. Razmatranje sopstva",
-  "dn15:27.1": "Onaj ko razmatra (ideju) sopstva, Ānanda, na koje ga načine razmatra?"
+  "dn15:27.1": "Onaj ko razmatra (ideju) sopstva, Ānanda, na koje ga načine razmatra?",
+  "dn15:27.2": "Tako što smatra da osećaj jeste sopstvo, ovim rečima:"
 }
