--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -170,5 +170,6 @@
   "dn15:27.5": "Ili smatra: ’Osećaj nije moje sopstvo; ali moje sopstvo nije bez doživljaja osećaja. Moje sopstvo oseća; jer moje sopstvo je podložno osećaju.’",
   "dn15:28.1": "Onda bi, Ānanda, toga ko kaže:",
   "dn15:28.2": "’Osećaj je moje sopstvo.’",
-  "dn15:28.3": "ovako trebalo upitati:"
+  "dn15:28.3": "ovako trebalo upitati:",
+  "dn15:28.4": "’Prijatelju, postoje ove tri vrste osećaja –"
 }
