--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -177,5 +177,6 @@
   "dn15:28.7": "Ānanda, kad neko oseća prijatan osećaj, tada on istom tom prilikom ne oseća bolan osećaj ili ni bolan ni prijatan osećaj;",
   "dn15:28.8": "tom prilikom on oseća jedino prijatan osećaj.",
   "dn15:28.9": "Kada neko oseća bolan osećaj, tada on istom tom prilikom ne oseća prijatan osećaj ili ni bolan ni prijatan osećaj;",
-  "dn15:28.10": "tom prilikom on oseća jedino bolan osećaj."
+  "dn15:28.10": "tom prilikom on oseća jedino bolan osećaj.",
+  "dn15:28.11": "Kada neko oseća ni bolan ni prijatan osećaj, tada on istom tom prilikom ne oseća prijatan osećaj ili bolan osećaj;"
 }
