--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -179,5 +179,6 @@
   "dn15:28.9": "Kada neko oseća bolan osećaj, tada on istom tom prilikom ne oseća prijatan osećaj ili ni bolan ni prijatan osećaj;",
   "dn15:28.10": "tom prilikom on oseća jedino bolan osećaj.",
   "dn15:28.11": "Kada neko oseća ni bolan ni prijatan osećaj, tada on istom tom prilikom ne oseća prijatan osećaj ili bolan osećaj;",
-  "dn15:28.12": "tom prilikom on oseća jedino ni bolan ni prijatan osećaj."
+  "dn15:28.12": "tom prilikom on oseća jedino ni bolan ni prijatan osećaj.",
+  "dn15:29.1": "Ānanda, prijatan osećaj je prolazan, uslovljen, nastao na osnovu uzroka, podložan razaranju, propadanju, slabljenju i nestanku."
 }
