--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -184,5 +184,6 @@
   "dn15:29.2": "Bolan osećaj je prolazan, uslovljen, nastao na osnovu uzroka, podložan razaranju, propadanju, slabljenju i nestanku.",
   "dn15:29.3": "Ni bolan ni prijatan osećaj je prolazan, uslovljen, nastao na osnovu uzroka, podložan razaranju, propadanju, slabljenju i nestanku.",
   "dn15:29.4": "Ako, dok doživljava prijatan osećaj, neko pomisli. ’To je moje sopstvo’,",
-  "dn15:29.5": "tada sa prestankom tog prijatnog osećaja on pomisli: ’Moje sopstvo je nestalo’."
+  "dn15:29.5": "tada sa prestankom tog prijatnog osećaja on pomisli: ’Moje sopstvo je nestalo’.",
+  "dn15:29.6": "Ako, dok doživljava bolan osećaj, neko pomisli. ’To je moje sopstvo’,"
 }
