--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -190,5 +190,6 @@
   "dn15:29.8": "Ako dok doživljava ni bolan ni prijatan osećaj neko pomisli: ’To je moje sopstvo’,",
   "dn15:29.9": "tada sa prestankom tog ni bolnog ni prijatnog osećaja on pomisli: ’Moje sopstvo je nestalo’.",
   "dn15:29.10": "Tako onaj ko kaže: ’Osećaj je moje sopstvo’ smatra sopstvo nečim što je, čak ovde i sada, prolazno, mešavina zadovoljstva i bola, podložnim nastanku i nestanku.",
-  "dn15:29.11": "Zbog toga, Ānanda, nije prihvatljivo smatrati da je osećaj sopstvo."
+  "dn15:29.11": "Zbog toga, Ānanda, nije prihvatljivo smatrati da je osećaj sopstvo.",
+  "dn15:30.1": "Onda bi, Ānanda, toga ko kaže:"
 }
