--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dn16:1.4.16": "„Da, poštovani gospodine, čuo sam o tome.”",
   "dn16:1.4.17": "„Ānanda, sve dok Vađđiji poštuju žene i devojke među sobom i ne prisiljavaju ih otmicom da žive sa njima, može se očekivati da oni napreduju, a ne da propadaju.",
   "dn16:1.4.18": "(6) A jesi li, Ānanda, čuo da Vađđiji poštuju svoja svetilišta, bilo da su u gradu ili izvan, uvažavaju i slave, ne uskraćuju im ono što im s pravom pripada, baš kao što su to činili i ranije?”",
-  "dn16:1.4.19": "„Da, poštovani gospodine, čuo sam o tome.”"
+  "dn16:1.4.19": "„Da, poštovani gospodine, čuo sam o tome.”",
+  "dn16:1.4.20": "„Ānanda, sve dok Vađđiji poštuju svoja svetilišta, bilo da su u gradu ili izvan, uvažavaju i slave, ne uskraćuju im ono što im s pravom pripada, baš kao što su to činili i ranije, može se očekivati da oni napreduju, a ne da propadaju."
 }
