--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dn16:1.4.23": "„Ānanda, sve dok Vađđiji grade boravišta za arahante, staraju se o njima, snabdevaju onim što im je potrebno, tako da oni vrli askete koji ne žive u njihovoj zemlji požele da tu dođu, a oni koji su već tu, žive zadovoljni, može se očekivati da Vađđiji napreduju, a ne da propadaju.",
   "dn16:1.5.1": "Onda Blaženi reče brahmanu Vassakāri:",
   "dn16:1.5.2": "„Brahmane, jednom sam živeo blizu Vesālija, kraj Sārandada svetilišta.",
-  "dn16:1.5.3": "Tu sam podučio Vađđije ovih sedam načela nepropadanja."
+  "dn16:1.5.3": "Tu sam podučio Vađđije ovih sedam načela nepropadanja.",
+  "dn16:1.5.4": "Brahmane, sve dok oni budu imali čvrsto uporište među Vađđijima, sve dok ih se oni budu pridržavali, može se očekivati da Vađđi napreduju, a ne da propadaju.”"
 }
