--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dn16:1.5.3": "Tu sam podučio Vađđije ovih sedam načela nepropadanja.",
   "dn16:1.5.4": "Brahmane, sve dok oni budu imali čvrsto uporište među Vađđijima, sve dok ih se oni budu pridržavali, može se očekivati da Vađđi napreduju, a ne da propadaju.”",
   "dn16:1.5.5": "Kada je ovo čuo, brahman Vassakāra reče Blaženom:",
-  "dn16:1.5.6": "„Poštovani Gotama, ako se budu pridržavali makar samo jednog od tih načela, Vađđiji će napredovati, a ne propadati."
+  "dn16:1.5.6": "„Poštovani Gotama, ako se budu pridržavali makar samo jednog od tih načela, Vađđiji će napredovati, a ne propadati.",
+  "dn16:1.5.7": "A pogotovo sa svih sedam!"
 }
