--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -52,5 +52,6 @@
   "dn16:1.5.5": "Kada je ovo čuo, brahman Vassakāra reče Blaženom:",
   "dn16:1.5.6": "„Poštovani Gotama, ako se budu pridržavali makar samo jednog od tih načela, Vađđiji će napredovati, a ne propadati.",
   "dn16:1.5.7": "A pogotovo svih sedam!",
-  "dn16:1.5.8": "Kralj Ađātasattu in ne može pobediti ratom, poštovani Gotama, već samo glasinama, samo ako unese razdor među njih."
+  "dn16:1.5.8": "Kralj Ađātasattu in ne može pobediti ratom, poštovani Gotama, već samo glasinama, samo ako unese razdor među njih.",
+  "dn16:1.5.9": "„A sada je, poštovani Gotama, vreme da krenem. Vrlo sam zauzet i mnogo toga treba još uraditi.”"
 }
