--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -138,5 +138,6 @@
   "dn16:1.13.3": "„Da, poštovani gospodine,“ odgovori Ānanda.",
   "dn16:1.13.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Ambalaṭṭhiku.",
   "dn16:1.14.1": "Tu se smestio u odmorištu koje je podigao kralj.",
-  "dn16:1.14.2": "Dok je tu boravio, Blaženi je često govorio monasima o Dhammi:"
+  "dn16:1.14.2": "Dok je tu boravio, Blaženi je često govorio monasima o Dhammi:",
+  "dn16:1.14.3": "„Postoji vrlina, postoji koncentracija, postoji mudrost."
 }
