--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -140,5 +140,6 @@
   "dn16:1.14.1": "Tu se smestio u odmorištu koje je podigao kralj.",
   "dn16:1.14.2": "Dok je tu boravio, Blaženi je često govorio monasima o Dhammi:",
   "dn16:1.14.3": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
-  "dn16:1.14.4": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge."
+  "dn16:1.14.4": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
+  "dn16:1.14.5": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
 }
