--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -143,5 +143,6 @@
   "dn16:1.14.4": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
   "dn16:1.14.5": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
   "dn16:1.14.6": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
-  "dn16:1.14.7": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”"
+  "dn16:1.14.7": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
+  "dn16:1.15.1": "Kada je ostao kraj Ambalaṭṭike koliko je želeo, Blaženi reče poštovanom Ānandi:"
 }
