--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -145,5 +145,6 @@
   "dn16:1.14.6": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
   "dn16:1.14.7": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:1.15.1": "Kada je ostao kraj Ambalaṭṭike koliko je želeo, Blaženi reče poštovanom Ānandi:",
-  "dn16:1.15.2": "„Hajde, Ānanda, idemo do Nāḷande.”"
+  "dn16:1.15.2": "„Hajde, Ānanda, idemo do Nāḷande.”",
+  "dn16:1.15.3": "„Da, poštovani gospodine,“ odgovori Ānanda."
 }
