--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -146,5 +146,6 @@
   "dn16:1.14.7": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:1.15.1": "Kada je ostao kraj Ambalaṭṭike koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:1.15.2": "„Hajde, Ānanda, idemo do Nāḷande.”",
-  "dn16:1.15.3": "„Da, poštovani gospodine,“ odgovori Ānanda."
+  "dn16:1.15.3": "„Da, poštovani gospodine,“ odgovori Ānanda.",
+  "dn16:1.15.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Nāḷandu."
 }
