--- a/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
@@ -55,7 +55,7 @@
   "mn81:7.12": "Denn ich betrachte es als heilig, diesen Gesegneten zu sehen.‘ ",
   "mn81:7.13": "Und zum dritten Mal sagte Jotipāla zu ihm: ",
   "mn81:7.14": "‚Genug, lieber Ghaṭīkāra. ",
-  "mn81:7.15": "Was soll es bringen, diesen Glatzkopf zu sehen, diesen falschen Asketen?‘ ",
+  "mn81:7.15": "Was soll es bringen, diesen glatzköpfigen Pfaffen zu sehen, diesen falschen Asketen?‘ ",
   "mn81:8.1": "Da packte Ghaṭīkāra Jotipāla am Gürtel und sagte: ",
   "mn81:8.2": "‚Lieber Jotipāla, das Kloster des Buddha Kassapa ist nicht weit von hier. ",
   "mn81:8.3": "Lass uns gehen, um den Gesegneten Kassapa zu sehen, den Vollendeten, den vollkommen erwachten Buddha. ",
