--- a/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
@@ -62,7 +62,7 @@
   "mn81:8.4": "Denn ich betrachte es als heilig, diesen Gesegneten zu sehen.‘ ",
   "mn81:8.5": "Da löste Jotipāla seinen Gürtel und sagte zu Ghaṭīkāra: ",
   "mn81:8.6": "‚Genug, lieber Ghaṭīkāra. ",
-  "mn81:8.7": "Was soll es bringen, diesen Glatzkopf zu sehen, diesen falschen Asketen?‘ ",
+  "mn81:8.7": "Was soll es bringen, diesen glatzköpfigen Pfaffen zu sehen, diesen falschen Asketen?‘ ",
   "mn81:9.1": "Da packte Ghaṭīkāra Jotipāla an den Haaren seines frisch gewaschenen Kopfes und sagte: ",
   "mn81:9.2": "‚Lieber Jotipāla, das Kloster des Buddha Kassapa ist nicht weit von hier. ",
   "mn81:9.3": "Lass uns gehen, um den Gesegneten Kassapa zu sehen, den Vollendeten, den vollkommen erwachten Buddha. ",
