--- a/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.9_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "ud7.9:1.3": "Die Brahmanen und Hausbesitzer von Thūṇa hörten: ",
   "ud7.9:1.4": "„Es scheint, der Asket Gotama – ein Sakyer, der von einer Familie der Sakyer fortgezogen ist – ist, während er im Land der Maller wandert, zusammen mit einem großen Saṅgha von Mönchen und Nonnen in Thūṇa angekommen.“ ",
   "ud7.9:1.5": "Sie füllten Gras und Spreu in den Brunnen bis zum Rand im Gedanken: ",
-  "ud7.9:1.6": "„Dass diese Glatzköpfe, diese falschen Asketen, kein Wasser trinken sollen!“ ",
+  "ud7.9:1.6": "„Dass diese glatzköpfigen Pfaffen, diese falschen Asketen, kein Wasser trinken sollen!“ ",
   "ud7.9:2.1": "Dann ging der Buddha von der Straße ab, ging zum Fuß eines Baumes, setzte sich auf den ausgebreiteten Sitz ",
   "ud7.9:2.2": "und sagte zum Ehrwürdigen Ānanda: ",
   "ud7.9:2.3": "„Bitte, Ānanda, hol mir etwas Wasser aus dem Brunnen.“ ",
