--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "dn27:3.7": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
   "dn27:3.8": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "dn27:3.9": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās. ",
-  "dn27:3.10": "Ihr beiden habt die erste Kaste verlassen, um euch einer geringeren Kaste anzuschließen, nämlich diesen Glatzköpfen, diesen falschen Asketen, diesem Gesindel, der schwarzen Ausgeburt aus den Füßen unseres Stammvaters. ",
+  "dn27:3.10": "Ihr beiden habt die erste Kaste verlassen, um euch einer geringeren Kaste anzuschließen, nämlich diesen glatzköpfigen Pfaffen, diesen falschen Asketen, diesem Gesindel, der schwarzen Ausgeburt aus den Füßen unseres Stammvaters. ",
   "dn27:3.11": "Das ist nicht richtig, es ist nicht recht!‘ ",
   "dn27:3.12": "So beleidigen uns die Brahmanen.“ ",
   "dn27:4.1": "„Vāseṭṭha, die Brahmanen vergessen tatsächlich ihre Überlieferung, wenn sie so zu euch sprechen. ",
