--- a/translation/de/sabbamitta/sutta/sn/sn14/sn14.34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn14/sn14.34_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn14.34:0.3": "Ausschließlich schmerzhaft ",
   "sn14.34:1.1": "In Sāvatthī. ",
   "sn14.34:1.2": "„Mönche und Nonnen, wenn das Erdelement ausschließlich schmerzhaft wäre – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, wären die Lebewesen nicht von ihm angezogen. ",
-  "sn14.34:1.3": "Aber da das Erdelement angenehm ist – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, lieben die Lebewesen es. ",
+  "sn14.34:1.3": "Aber da das Erdelement angenehm ist – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, sind die Lebewesen von ihm angezogen. ",
   "sn14.34:2.1": "Wenn das Wasserelement ausschließlich schmerzhaft wäre … ",
   "sn14.34:2.2": "Wenn das Feuerelement ausschließlich schmerzhaft wäre … ",
   "sn14.34:2.3": "Wenn das Luftelement ausschließlich schmerzhaft wäre – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, würden die Lebewesen es nicht lieben. ",
