--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.18_translation-de-sabbamitta.json
@@ -3,7 +3,7 @@
   "sn35.18:0.2": "2. Das Kapitel mit Paaren ",
   "sn35.18:0.3": "Wenn es keine vorteilhaften Folgen gäbe (2) ",
   "sn35.18:1.1": "„Mönche und Nonnen, wenn es bei Bildern keine vorteilhaften Folgen gäbe, wären die Lebewesen nicht von ihnen angezogen. ",
-  "sn35.18:1.2": "Aber da es bei Bildern vorteilhafte Folgen gibt, lieben die Lebewesen sie. ",
+  "sn35.18:1.2": "Aber da es bei Bildern vorteilhafte Folgen gibt, sind die Lebewesen von ihnen angezogen. ",
   "sn35.18:1.3": "Wenn es bei Bildern keine nachteiligen Folgen gäbe, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn35.18:1.4": "Aber da es bei Bildern nachteilige Folgen gibt, werden die Lebewesen davon ernüchtert. ",
   "sn35.18:1.5": "Wenn es von Bildern kein Entrinnen gäbe, könnten die Lebewesen ihnen nicht entrinnen. ",
