--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.18_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn35.18:1.8": "Wenn es bei Düften keine vorteilhaften Folgen gäbe … ",
   "sn35.18:1.9": "Wenn es bei Geschmäcken keine vorteilhaften Folgen gäbe … ",
   "sn35.18:1.10": "Wenn es bei Berührungen keine vorteilhaften Folgen gäbe … ",
-  "sn35.18:1.11": "Wenn es bei Gedanken keine vorteilhaften Folgen gäbe, würden die Lebewesen sie nicht lieben. ",
+  "sn35.18:1.11": "Wenn es bei Gedanken keine vorteilhaften Folgen gäbe, wären die Lebewesen nicht von ihnen angezogen. ",
   "sn35.18:1.12": "Aber da es bei Gedanken vorteilhafte Folgen gibt, lieben die Lebewesen sie. ",
   "sn35.18:1.13": "Wenn es bei Gedanken keine nachteiligen Folgen gäbe, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn35.18:1.14": "Aber da es bei Gedanken nachteilige Folgen gibt, werden die Lebewesen davon ernüchtert. ",
